Remove large SQL backup files and update .gitignore
- Remove SQL backup files exceeding GitHub's 100MB limit
- Add deployment/migration-backup/*.sql and *.dump to .gitignore
- These files should be stored in a separate backup location, not in git

--- a/.gitignore
+++ b/.gitignore
@@ -120,6 +120,10 @@ data/redis/*
 backups/postgres/*
 !backups/postgres/.gitkeep
 
+# Database migration backups (large SQL files)
+deployment/migration-backup/*.sql
+deployment/migration-backup/*.dump
+
 # Upload files (keep structure but ignore uploads)
 uploads/*
 !uploads/.gitkeep
